select dropdown mispositioned with desktop zooming
Categories
(Core :: Layout: Form Controls, defect, P3)
Tracking
()
Tracking | Status | |
---|---|---|
firefox79 | --- | fixed |
People
(Reporter: tnikkel, Assigned: tnikkel)
References
(Blocks 1 open bug, Regressed 1 open bug)
Details
(Whiteboard: apz-planning)
Attachments
(2 files, 1 obsolete file)
Bug 1632268. Add browser chrome test for select dropdown position with pinch (apz) zooming. r=botond
47 bytes,
text/x-phabricator-request
|
Details | Review | |
47 bytes,
text/x-phabricator-request
|
Details | Review |
Pinch zoom in, open a select dropdown, the dropdown will be in the wrong place.
Also, if you have a dropdown open and you zoom in then the dropdown doesn't move to where it should be. Chrome and Safari handle this problem by ignoring pinch gestures while a dropdown is open, which seems like a good solution.
Assignee | ||
Comment 1•9 months ago
|
||
Kris, can you get this blocking the right bugs for desktop zooming? Thanks.
Updated•9 months ago
|
Assignee | ||
Comment 3•9 months ago
|
||
(In reply to Botond Ballo [:botond] from comment #2)
This may be fixed by bug 1556556.
It is not, just checked in my local build with bug 1556556 + bug 1631568 + bug 1632789.
Assignee | ||
Updated•9 months ago
|
Assignee | ||
Comment 4•9 months ago
|
||
Something like this fixes it. Needs testing and a little cleaning up.
Updated•9 months ago
|
Comment 5•9 months ago
|
||
Adding other bugs that seem related, and may or may not be fixed by this. I haven't checked.
Assignee | ||
Updated•8 months ago
|
Assignee | ||
Comment 6•8 months ago
|
||
Assignee | ||
Comment 7•8 months ago
|
||
Depends on D78025
Updated•8 months ago
|
Updated•8 months ago
|
Pushed by tnikkel@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/de41c0019f53 Add browser chrome test for select dropdown position with pinch (apz) zooming. r=botond https://hg.mozilla.org/integration/autoland/rev/6a37740e8d2e Take into account resolution when position select drop downs and form autocomplete. r=botond
Comment 9•8 months ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/de41c0019f53
https://hg.mozilla.org/mozilla-central/rev/6a37740e8d2e
Description
•