Bug 1632268. Take into account resolution when position select drop downs and form autocomplete. r=botond

One note about this solution: it includes the apz callback transform for the root scroll frame of the root content document, but no other apz callback transform that might be on an ancestor of the select element.

Differential Revision: https://phabricator.services.mozilla.com/D78026